Revision history for IPC::SRLock

0.1.82  21/11/2008
        - Removed circular dependency on Exception::Class

0.1.80  15/11/2008
        - New approach to CPAN testing

0.1.78  19/10/2008
        - Another attempt to find the off swith for CPAN testers

0.1.75  15/10/2008
        - Exempted automated testing due to continued inaccurate
          reporting
        - Minor performance improvements